--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ nodeenv==1.6.0
 pathspec==0.9.0
 platformdirs==2.4.0
 pre-commit==2.15.0
+psutil==5.8.0
 pydantic==1.8.2
 python-crontab==2.5.1
 python-dateutil==2.8.2
